# manifest.cpp

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  TILE_SYSTEM_SUMMARY.md  debug_renderer.cpp  debug_test  debug_test.cpp  engine_output.txt  plan.md
assets/shaders/: hex_procedural.frag  hex_procedural.vert  minimal_test.frag  minimal_test.vert
build_test/: Manifest
build_test/assets/shaders/: hex_procedural.frag
scripts/: format-code.sh
src/: main.cpp
src/ai/: CMakeLists.txt
src/core/: CMakeLists.txt  empty.cpp
src/core/graphics/: Camera.hpp
src/core/log/: CMakeLists.txt  Example.cpp  Level.hpp  Log.hpp  Logger.hpp  README.md  Record.hpp  Sink.hpp
src/core/math/: Matrix.hpp  Vector.hpp
src/core/memory/: Pool.hpp
src/core/time/: Time.hpp
src/core/types/: Modern.hpp  Types.hpp
src/game/: CMakeLists.txt
src/net/: CMakeLists.txt
src/render/: CMakeLists.txt  RendererFactory.cpp
src/render/camera/: Behavior.cpp  Behavior.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Controls.cpp  Controls.hpp  Cursor.cpp  Cursor.hpp  README.md  ResultHelper.hpp  Selection.cpp  Selection.hpp  State.cpp  State.hpp  test_camera.cpp
src/render/common/: Camera.hpp  HexMesh.hpp  HexRenderer.cpp  HexRenderer.hpp  ProceduralHexRenderer.cpp  ProceduralHexRenderer.hpp  Renderer.hpp  Types.hpp
src/render/culling/: CMakeLists.txt  FrustumCuller.cpp  FrustumCuller.hpp  SpatialHash.cpp  SpatialHash.hpp
src/render/examples/: MultiPassDemo.cpp  MultiPassDemo.hpp  ProceduralHexDemo.hpp
src/render/opengl/: Compat.hpp  Converter.hpp  Core.cpp  Core.hpp  Debug.hpp  Loader.hpp  OpenGL.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  Resource.hpp
src/render/passes/: CMakeLists.txt  MainPass.cpp  MainPass.hpp  PostProcessPass.cpp  PostProcessPass.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderPass.cpp  RenderPass.hpp  ShadowPass.cpp  ShadowPass.hpp
src/render/vulkan/: VkCommands.cpp  VkCommands.hpp  VkCompat.hpp  VkCore.cpp  VkCore.hpp  VkDevice.cpp  VkDevice.hpp  VkMemory.cpp  VkMemory.hpp  VkResources.cpp  VkResources.hpp  VkUtils.cpp  VkUtils.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
src/tools/: CMakeLists.txt
src/ui/: CMakeLists.txt
src/ui/window/: CMakeLists.txt  Events.hpp  Factory.cpp  Factory.hpp  Keys.hpp  Manager.cpp  Manager.hpp  README.md  Surface.cpp  Surface.hpp  Window.hpp
src/ui/window/backends/: GLFW.cpp  GLFW.hpp  Mock.cpp  Mock.hpp
src/world/: CMakeLists.txt
src/world/generation/: Biomes.hpp  CMakeLists.txt  Climate.hpp  ClimateExample.cpp  Enhanced.hpp  Geology.hpp  Latitude.hpp  Noise.hpp  Plates.hpp  Rainfall.hpp  Rivers.hpp  Wonders.hpp
src/world/terrain/: Enhanced.hpp  Generator.hpp
src/world/tiles/: CMakeLists.txt  Culture.cpp  Culture.hpp  Layers.cpp  Layers.hpp  Map.hpp  Ownership.hpp  Province.hpp  Region.hpp  Rules.cpp  Rules.hpp  Supply.cpp  Supply.hpp  Tile.cpp  Tile.hpp
test_camera_standalone/: CMakeLists.txt
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  MinimalRenderTest.cpp  MinimalTriangleTest.cpp  RenderingDebugTest.cpp  RenderingIntegrationTest.cpp  SimpleRenderTest.cpp  WorldGenerationIntegrationTest.cpp
tests/performance/: CMakeLists.txt  MathPerformanceTest.cpp  WorldPerformanceTest.cpp
tests/unit/: CMakeLists.txt  CameraControlsTest.cpp  CameraTest.cpp  CoreTypesTest.cpp  HexRendererTest.cpp  LogTest.cpp  MapTest.cpp  MathTest.cpp  MemoryTest.cpp  NoiseTest.cpp  RainfallTest.cpp  TerrainGeneratorTest.cpp  TileTest.cpp  TimeTest.cpp  WindowTest.cpp
tests/utils/: TestUtils.cpp  TestUtils.hpp
